add year and task in collections

--- a/configs/aot_gan/metafile.yml
+++ b/configs/aot_gan/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://arxiv.org/pdf/2104.01431.pdf
   README: configs/aot_gan/README.md
+  Task:
+  - inpainting
+  Year: 2021
 Models:
 - Config: configs/aot_gan/aot-gan_smpgan_4xb4_places-512x512.py
   In Collection: AOT-GAN
