--- a/configs/edvr/metafile.yml
+++ b/configs/edvr/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://arxiv.org/abs/1905.02716?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%253A+arxiv%252FQSXk+%2528ExcitingAds%2521+cs+updates+on+arXiv.org%2529
   README: configs/edvr/README.md
+  Task:
+  - video super-resolution
+  Year: 2019
 Models:
 - Config: configs/edvr/edvrm_wotsa_8xb4-600k_reds.py
   In Collection: EDVR
