--- a/configs/rdn/metafile.yml
+++ b/configs/rdn/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://arxiv.org/abs/1802.08797
   README: configs/rdn/README.md
+  Task:
+  - image super-resolution
+  Year: 2018
 Models:
 - Config: configs/rdn/rdn_x4c64b16_1xb16-1000k_div2k.py
   In Collection: RDN
