--- a/configs/guided_diffusion/metafile.yml
+++ b/configs/guided_diffusion/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://papers.nips.cc/paper/2021/file/49ad23d1ec9fa4bd8d77d02681df5cfa-Paper.pdf
   README: configs/guided_diffusion/README.md
+  Task:
+  - image generation
+  Year: 2021
 Models:
 - Config: configs/guided_diffusion/adm-u_8xb32_imagenet-64x64.py
   In Collection: Guided Diffusion
