--- a/configs/inst_colorization/metafile.yml
+++ b/configs/inst_colorization/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://openaccess.thecvf.com/content_CVPR_2020/html/Su_Instance-Aware_Image_Colorization_CVPR_2020_paper.html
   README: configs/inst_colorization/README.md
+  Task:
+  - colorization
+  Year: 2020
 Models:
 - Config: configs/inst_colorization/inst-colorizatioon_full_official_cocostuff-256x256.py
   In Collection: Instance-aware Image Colorization
