--- a/configs/pggan/metafile.yml
+++ b/configs/pggan/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://arxiv.org/abs/1710.10196
   README: configs/pggan/README.md
+  Task:
+  - unconditional gans
+  Year: 2018
 Models:
 - Config: configs/pggan/pggan_8xb4-12Mimgs_celeba-cropped-128x128.py
   In Collection: PGGAN
