--- a/configs/sngan_proj/metafile.yml
+++ b/configs/sngan_proj/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://openreview.net/forum?id=B1QRgziT-
   README: configs/sngan_proj/README.md
+  Task:
+  - conditional gans
+  Year: 2018
 Models:
 - Config: configs/sngan_proj/sngan-proj_woReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
   In Collection: SNGAN
