--- a/configs/wgan-gp/metafile.yml
+++ b/configs/wgan-gp/metafile.yml
@@ -6,6 +6,9 @@ Collections:
   Paper:
   - https://arxiv.org/abs/1704.00028
   README: configs/wgan-gp/README.md
+  Task:
+  - unconditional gans
+  Year: 2017
 Models:
 - Config: configs/wgan-gp/wgangp_GN_1xb64-160kiters_celeba-cropped-128x128.py
   In Collection: WGAN-GP
