--- a/configs/swinir/metafile.yml
+++ b/configs/swinir/metafile.yml
@@ -23,7 +23,7 @@ Models:
       Set5 PSNR: 38.324
       Set5 SSIM: 0.9626
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1NwpDavsYKNcVptQyUrCzFp2ArAtBV6a2/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x2s48w8d6e180_8xb4-lr2e-4-500k_div2k-ed2d419e.pth
 - Config: configs/swinir/swinir_x3s48w8d6e180_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
   Metadata:
@@ -40,7 +40,7 @@ Models:
       Set5 PSNR: 34.864
       Set5 SSIM: 0.9317
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/11fn_CkgaYl-flzaeJeapKa0d17RwPNQ9/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x3s48w8d6e180_8xb4-lr2e-4-500k_div2k-926950f1.pth
 - Config: configs/swinir/swinir_x4s48w8d6e180_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
   Metadata:
@@ -57,7 +57,7 @@ Models:
       Set5 PSNR: 32.7315
       Set5 SSIM: 0.9029
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1KWaJ3X6ZrXJZ37jHczdjRTcElQ_sPTpP/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x4s48w8d6e180_8xb4-lr2e-4-500k_div2k-88e4903d.pth
 - Config: configs/swinir/swinir_x2s64w8d6e180_8xb4-lr2e-4-500k_df2k.py
   In Collection: SwinIR
   Metadata:
@@ -74,7 +74,7 @@ Models:
       Set5 PSNR: 38.3971
       Set5 SSIM: 0.9629
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1Uw1QtPKnBvFalgx8sC-moFmTLCBtfbqM/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x2s64w8d6e180_8xb4-lr2e-4-500k_df2k-69e15fb6.pth
 - Config: configs/swinir/swinir_x3s64w8d6e180_8xb4-lr2e-4-500k_df2k.py
   In Collection: SwinIR
   Metadata:
@@ -91,7 +91,7 @@ Models:
       Set5 PSNR: 34.9335
       Set5 SSIM: 0.9323
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/13VOC_15bH4OcfqLX3TYa3NwoTSADKH9b/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x3s64w8d6e180_8xb4-lr2e-4-500k_df2k-d6982f7b.pth
 - Config: configs/swinir/swinir_x4s64w8d6e180_8xb4-lr2e-4-500k_df2k.py
   In Collection: SwinIR
   Metadata:
@@ -108,7 +108,7 @@ Models:
       Set5 PSNR: 32.9214
       Set5 SSIM: 0.9053
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/12IXYTR_3UebYbTqR9wumBEv5AlL6Qyr9/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x4s64w8d6e180_8xb4-lr2e-4-500k_df2k-0502d775.pth
 - Config: configs/swinir/swinir_x2s64w8d4e60_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
   Metadata:
@@ -125,7 +125,7 @@ Models:
       Set5 PSNR: 38.1289
       Set5 SSIM: 0.9617
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/13dDwSMxjBpZZiXlgKHH9onkxzLUKZ0LX/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x2s64w8d4e60_8xb4-lr2e-4-500k_div2k-131d3f64.pth
 - Config: configs/swinir/swinir_x3s64w8d4e60_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
   Metadata:
@@ -142,7 +142,7 @@ Models:
       Set5 PSNR: 34.6037
       Set5 SSIM: 0.9293
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1Jj0Mdyd2sbaaredwNxVtp0zraHr_EgCN/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x3s64w8d4e60_8xb4-lr2e-4-500k_div2k-309cb239.pth
 - Config: configs/swinir/swinir_x4s64w8d4e60_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
   Metadata:
@@ -159,7 +159,7 @@ Models:
       Set5 PSNR: 32.4343
       Set5 SSIM: 0.8984
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1hf-Bod4nAo13dRgyHKYiAi260a1sYCT8/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_x4s64w8d4e60_8xb4-lr2e-4-500k_div2k-d6622d03.pth
 - Config: configs/swinir/swinir_gan-x2s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
   Metadata:
@@ -171,7 +171,7 @@ Models:
     Metrics:
       RealSRSet+5images NIQE: 5.7975
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1efvIxFkevJpRsUd-Mvq7OIeeGbBhXtyJ/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_gan-x2s64w8d6e180_8xb4-lr1e-4-600k_df2k-os-c6425057.pth
 - Config: configs/swinir/swinir_psnr-x2s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
   Metadata:
@@ -183,7 +183,7 @@ Models:
     Metrics:
       RealSRSet+5images NIQE: 7.2738
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1RpeouyxHZbhS0z-uoX8r5Ys2jD8R59IL/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_psnr-x2s64w8d6e180_8xb4-lr1e-4-600k_df2k-os-6f0c425f.pth
 - Config: configs/swinir/swinir_gan-x4s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
   Metadata:
@@ -195,7 +195,7 @@ Models:
     Metrics:
       RealSRSet+5images NIQE: 5.2329
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1YryTalO1rqlqtVi7ZSnEGXXqg_Pg4_9w/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_gan-x4s64w8d6e180_8xb4-lr1e-4-600k_df2k-os-36960d18.pth
 - Config: configs/swinir/swinir_psnr-x4s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
   Metadata:
@@ -207,7 +207,7 @@ Models:
     Metrics:
       RealSRSet+5images NIQE: 7.746
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1T0XYcNdAVM_UuQlgauHrUSLM_EPB_XCY/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_psnr-x4s64w8d6e180_8xb4-lr1e-4-600k_df2k-os-a016a72f.pth
 - Config: configs/swinir/swinir_gan-x4s64w8d9e240_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
   Metadata:
@@ -219,7 +219,7 @@ Models:
     Metrics:
       RealSRSet+5images NIQE: 5.1464
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1RJOir_JbWcjZDKK1Rq6GqDtrE4DQhbKL/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/
 - Config: configs/swinir/swinir_psnr-x4s64w8d9e240_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
   Metadata:
@@ -231,7 +231,7 @@ Models:
     Metrics:
       RealSRSet+5images NIQE: 7.6378
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1YAeG9duFEt5yJtFS_iCFI685mgb7UUJi/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_gan-x4s64w8d9e240_8xb4-lr1e-4-600k_df2k-os-9f1599b5.pth
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN15.py
   In Collection: SwinIR
   Metadata:
@@ -245,7 +245,7 @@ Models:
       Set12 PSNR: 33.9731
       Urban100 PSNR: 34.3424
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/18PmDIFYZtlvyLQnGYvKShO-CdtlPwIwe/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN15-6782691b.pth
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN25.py
   In Collection: SwinIR
   Metadata:
@@ -259,7 +259,7 @@ Models:
       Set12 PSNR: 31.6434
       Urban100 PSNR: 31.9493
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1PqC9a-3wfyH6DeVpP2yi6r6stqEB1vfj/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN25-d0d8d4da.pth
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN50.py
   In Collection: SwinIR
   Metadata:
@@ -273,7 +273,7 @@ Models:
       Set12 PSNR: 28.5651
       Urban100 PSNR: 28.6626
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1miDCBmxe73XoxkJDLAmqOBbuiY9U6JRz/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN50-54c9968a.pth
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN15.py
   In Collection: SwinIR
   Metadata:
@@ -288,7 +288,7 @@ Models:
       McMaster PSNR: 35.6205
       Urban100 PSNR: 35.1836
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/16pfIBzAXTv6-3xTsKXEtLkY2pLM-tNFn/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN15-c74a2cee.pth
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN25.py
   In Collection: SwinIR
   Metadata:
@@ -303,7 +303,7 @@ Models:
       McMaster PSNR: 33.3198
       Urban100 PSNR: 32.9458
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1pihZhiw1V5hWNoaWCuabN8KCj6_il6KG/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN25-df2b1c0c.pth
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN50.py
   In Collection: SwinIR
   Metadata:
@@ -318,7 +318,7 @@ Models:
       McMaster PSNR: 30.2027
       Urban100 PSNR: 29.8832
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1pihZhiw1V5hWNoaWCuabN8KCj6_il6KG/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN50-e369874c.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR10.py
   In Collection: SwinIR
   Metadata:
@@ -333,7 +333,7 @@ Models:
       LIVE1 PSNR: 29.8611
       LIVE1 SSIM: 0.8292
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1LMEGlGtYcrJ9dhC8pmNsCAWyeZq1Dfc5/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR10-da93c8e9.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR20.py
   In Collection: SwinIR
   Metadata:
@@ -348,7 +348,7 @@ Models:
       LIVE1 PSNR: 32.2667
       LIVE1 SSIM: 0.8914
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1624dceqoBD5CwqLuL_ozPaYuIQex2WmL/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR20-d47367b1.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR30.py
   In Collection: SwinIR
   Metadata:
@@ -363,7 +363,7 @@ Models:
       LIVE1 PSNR: 33.7001
       LIVE1 SSIM: 0.9179
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1X70GSCK8Wo9nYUmtN0MysCarIHliB3WM/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR30-52c083cf.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR40.py
   In Collection: SwinIR
   Metadata:
@@ -378,7 +378,7 @@ Models:
       LIVE1 PSNR: 34.6846
       LIVE1 SSIM: 0.9322
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1HQGYXthHnmVsng1313KZmGzewsWPzzDT/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR40-803e8d9b.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR10.py
   In Collection: SwinIR
   Metadata:
@@ -390,10 +390,10 @@ Models:
     Metrics:
       Classic5 PSNR: 30.1019
       Classic5 SSIM: 0.8217
-      LIVE1 PSNR: 27.9085
-      LIVE1 SSIM: 0.8057
+      LIVE1 PSNR: 28.0676
+      LIVE1 SSIM: 0.8094
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1YXlmXo5SdQF7JwEvedUmNgxrPZVwxAgg/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR10-09aafadc.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR20.py
   In Collection: SwinIR
   Metadata:
@@ -405,10 +405,10 @@ Models:
     Metrics:
       Classic5 PSNR: 32.3489
       Classic5 SSIM: 0.8727
-      LIVE1 PSNR: 30.2844
-      LIVE1 SSIM: 0.8717
+      LIVE1 PSNR: 30.4514
+      LIVE1 SSIM: 0.8745
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1pY6RXvp2y98Qx4VhaZOSVTpyOQzk8l9b/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR20-b8a42b5e.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR30.py
   In Collection: SwinIR
   Metadata:
@@ -420,10 +420,10 @@ Models:
     Metrics:
       Classic5 PSNR: 33.6028
       Classic5 SSIM: 0.8949
-      LIVE1 PSNR: 31.6396
-      LIVE1 SSIM: 0.9
+      LIVE1 PSNR: 31.8235
+      LIVE1 SSIM: 0.9023
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1LUiFJCdcGCRl4NDAtiyj2Ba87fKW3p5x/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR30-e9fe6859.pth
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR40.py
   In Collection: SwinIR
   Metadata:
@@ -435,7 +435,7 @@ Models:
     Metrics:
       Classic5 PSNR: 34.4344
       Classic5 SSIM: 0.9076
-      LIVE1 PSNR: 32.5833
-      LIVE1 SSIM: 0.9158
+      LIVE1 PSNR: 32.761
+      LIVE1 SSIM: 0.9179
     Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
-  Weights: https://drive.google.com/file/d/1N7veqPM2ypF1hOyq8UC7BHLb4K5391wZ/view?usp=share_link
+  Weights: https://download.openmmlab.com/mmediting/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR40-5b77a6e6.pth
