[CodeCamp #84] Support SwinIR model (#1476)
* [Feature] Support SwinIR model

* [Feature] Support SwinIR model

* [Feature] Support SwinIR model

* [Feature] Support SwinIR model

* [Feature] Support SwinIR model

* [Feature] Support SwinIR model

* fix configs

* rename

* remove testdata

* refactor decompression test config

* update the readme

* [Feature] Support SwinIR model

* update random JPEG and noise

* update random JPEG and noise

* update real sr large config

* fix sr configs

* fix car and denoising configs

* fix random_degradations

* fix readme

* refactor swinirnet

* fix ut

* remove files

* fix init

* fix jpeg comp

* fix readme

* fix lint

* fix ut

* fix ut

* fix ut

Co-authored-by: Z-Fran <1396925302@qq.com>
Co-authored-by: Z-Fran <49083766+Z-Fran@users.noreply.github.com>

--- a/model-index.yml
+++ b/model-index.yml
@@ -44,6 +44,7 @@ Import:
 - configs/styleganv1/metafile.yml
 - configs/styleganv2/metafile.yml
 - configs/styleganv3/metafile.yml
+- configs/swinir/metafile.yml
 - configs/tdan/metafile.yml
 - configs/tof/metafile.yml
 - configs/ttsr/metafile.yml
