--- a/configs/guided_diffusion/metafile.yml
+++ b/configs/guided_diffusion/metafile.yml
@@ -9,34 +9,4 @@ Collections:
   Task:
   - image generation
   Year: 2021
-Models:
-- Config: configs/guided_diffusion/adm-u_8xb32_imagenet-64x64.py
-  In Collection: Guided Diffusion
-  Metadata:
-    Training Data: Others
-  Name: adm-u_8xb32_imagenet-64x64
-  Results:
-  - Dataset: Others
-    Metrics: {}
-    Task: Image Generation
-  Weights: https://download.openmmlab.com/mmediting/guided_diffusion/adm-u-cvt-rgb_8xb32_imagenet-64x64-7ff0080b.pth
-- Config: configs/guided_diffusion/adm-u_8xb32_imagenet-512x512.py
-  In Collection: Guided Diffusion
-  Metadata:
-    Training Data: Others
-  Name: adm-u_8xb32_imagenet-512x512
-  Results:
-  - Dataset: Others
-    Metrics: {}
-    Task: Image Generation
-  Weights: https://download.openmmlab.com/mmediting/guided_diffusion/adm-u_8xb32_imagenet-512x512-60b381cb.pth
-- Config: configs/guided_diffusion/adm-u_ddim250_8xb32_imagenet-512x512.py
-  In Collection: Guided Diffusion
-  Metadata:
-    Training Data: Others
-  Name: adm-u_ddim250_8xb32_imagenet-512x512
-  Results:
-  - Dataset: Others
-    Metrics: {}
-    Task: Image Generation
-  Weights: <>
+Models: []
