--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
           pip install wheel
-          python setup.py sdist
+          python setup.py sdist bdist_wheel
       - name: Publish distribution to PyPI
         run: |
           pip install twine
