--- a/.github/workflows/pr_stage_test.yml
+++ b/.github/workflows/pr_stage_test.yml
@@ -86,6 +86,7 @@ jobs:
         run: |
           apt-get update
           apt-get install -y ffmpeg libsm6 libxext6 git ninja-build libglib2.0-0 libxrender-dev
+          apt upgrade -y libc6
       - name: Install PyTorch
         run: pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmedit dependencies
@@ -96,6 +97,7 @@ jobs:
           pip install -r requirements/tests.txt
       - name: Build and install
         run: |
+          python setup.py check -m -s
           pip install -e .
       # - name: Setup tmate session
       #   if: ${{ failure() }}
