[Feature] controlnet animation inferencer (#1713)
* add config

* add controlnet animation inferencer

* fix lint

* add controlnet_aux dependency

* fix lint

* fix ut

* add readme

* add demo

* change video size

* misc

* misc

* misc

* misc

* misc

* misc

* add video input output

* add video result to readme

* misc

* misc

* update readme

* update readme

* update readme

* update inferecer

* update readme

* add gradio demo

* fix lint

* add control weight

* add arguments

* add inherit pipeline

* delete unused code

* fix hard code

* fix lint

* support fp16

* misc change.

* add latent mask to improve edge

* roll back inferencer dir change

* revert change

* fix lint

* implement with our controlnet

* build scheduler from mmedit

* update readme

* update readme

* rename gradio inpaiting demo

* Update configs/controlnet_animation/README.md

Co-authored-by: LeoXing1996 <xingzn1996@hotmail.com>

* Update mmedit/models/diffusion_schedulers/__init__.py

Co-authored-by: LeoXing1996 <xingzn1996@hotmail.com>

---------

Co-authored-by: LeoXing1996 <xingzn1996@hotmail.com>

--- a/model-index.yml
+++ b/model-index.yml
@@ -5,6 +5,7 @@ Import:
 - configs/biggan/metafile.yml
 - configs/cain/metafile.yml
 - configs/controlnet/metafile.yml
+- configs/controlnet_animation/metafile.yml
 - configs/cyclegan/metafile.yml
 - configs/dcgan/metafile.yml
 - configs/deepfillv1/metafile.yml
