[Fix] update owners

--- a/.owners.yml
+++ b/.owners.yml
@@ -4,12 +4,17 @@ assign:
   pull_requests: enabled # or disabled
   # assign strategy, both issues and pull requests follow the same strategy
   strategy:
-    random
-    # round-robin (not impl currently.)
-    # daily-shift-based
+    # random
+    # round-robin
+    daily-shift-based
   scedule:
     '*/1 * * * *'
   # assignees
   assignees:
-    - wangruohui
-    - Yshuo-Li
+    - LeoXing1996
+    - zengyh1900
+    - plyfager
+    - liuwenran
+    - Z-Fran
+    - LeoXing1996
+    - LeoXing1996
